Drop Down Login
Made the Login a Dropdown menu

--- a/ECommerceSite/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/ECommerceSite/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model ECommerceSite.Models.ExternalLoginConfirmationViewModel
+﻿@model ECommerceSite.ViewModels.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
