--- a/ECommerceSite/Views/Account/ForgotPassword.cshtml
+++ b/ECommerceSite/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model ECommerceSite.Models.ForgotPasswordViewModel
+﻿@model ECommerceSite.ViewModels.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
