--- a/ECommerceSite/Views/Account/Register.cshtml
+++ b/ECommerceSite/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model ECommerceSite.Models.RegisterViewModel
+﻿@model ECommerceSite.ViewModels.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
