--- a/ECommerceSite/Views/Account/ResetPassword.cshtml
+++ b/ECommerceSite/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model ECommerceSite.Models.ResetPasswordViewModel
+﻿@model ECommerceSite.ViewModels.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
