--- a/ECommerceSite/Views/Account/VerifyCode.cshtml
+++ b/ECommerceSite/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model ECommerceSite.Models.VerifyCodeViewModel
+﻿@model ECommerceSite.ViewModels.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
