--- a/ECommerceSite/Views/Manage/AddPhoneNumber.cshtml
+++ b/ECommerceSite/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model ECommerceSite.Models.AddPhoneNumberViewModel
+﻿@model ECommerceSite.ViewModels.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
