--- a/ECommerceSite/Views/Manage/ChangePassword.cshtml
+++ b/ECommerceSite/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model ECommerceSite.Models.ChangePasswordViewModel
+﻿@model ECommerceSite.ViewModels.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
