--- a/ECommerceSite/Views/Manage/ManageLogins.cshtml
+++ b/ECommerceSite/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model ECommerceSite.Models.ManageLoginsViewModel
+﻿@model ECommerceSite.ViewModels.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
