--- a/ECommerceSite/Views/Manage/SetPassword.cshtml
+++ b/ECommerceSite/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model ECommerceSite.Models.SetPasswordViewModel
+﻿@model ECommerceSite.ViewModels.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
