--- a/ECommerceSite/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/ECommerceSite/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model ECommerceSite.Models.VerifyPhoneNumberViewModel
+﻿@model ECommerceSite.ViewModels.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
