--- a/ECommerceSite/Views/Shared/_LoginPartial.cshtml
+++ b/ECommerceSite/Views/Shared/_LoginPartial.cshtml
@@ -17,6 +17,18 @@ else
 {
     <ul class="nav navbar-nav navbar-right">
         <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        @*<li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>*@
+        <li class="dropdown" id="menuLogin">
+            <a class="dropdown-toggle" href="#" data-toggle="dropdown" id="navLogin">Login</a>
+            <div class="dropdown-menu" style="padding:17px;">
+                @Html.Partial("_LoginDropdownPartial")
+            </div>
+        </li>
     </ul>
+    
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
 }
+
+
