--- a/ECommerceSite/Views/Account/SendCode.cshtml
+++ b/ECommerceSite/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model ECommerceSite.Models.SendCodeViewModel
+﻿@model ECommerceSite.ViewModels.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
