--- a/ECommerceSite/Views/Shared/_LoginDropdownPartial.cshtml
+++ b/ECommerceSite/Views/Shared/_LoginDropdownPartial.cshtml
@@ -20,10 +20,12 @@
         </div>
     </div>
     <div class="form-group">
-        <div class="col-md-offset-1 col-md-10">
+        <div class="col-md-10">
             <div class="checkbox">
-                @Html.CheckBoxFor(m => m.RememberMe)
-                @Html.LabelFor(m => m.RememberMe)
+                <label>
+                    @Html.CheckBoxFor(m => m.RememberMe)
+                    @Html.DisplayNameFor(m => m.RememberMe)
+                </label>
             </div>
         </div>
     </div>
