--- a/ECommerceSite/Views/Shared/_Layout.cshtml
+++ b/ECommerceSite/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
+        <footer class="footer">
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
