--- a/ECommerceSite/Views/ShoppingCart/Index.cshtml
+++ b/ECommerceSite/Views/ShoppingCart/Index.cshtml
@@ -3,33 +3,6 @@
 @{
     ViewBag.Title = "Shopping Cart";
 }
-<script src="/Scripts/jquery-1.4.4.min.js"
-        type="text/javascript"></script>
-<script type="text/javascript">
-    $(function () {
-        // Document.ready -> link up remove event handler
-        $(".RemoveLink").click(function () {
-            // Get the id from the link
-            var recordToDelete = $(this).attr("data-id");
-            if (recordToDelete != '') {
-                // Perform the ajax post
-                $.post("/ShoppingCart/RemoveFromCart", { "id": recordToDelete },
-                    function (data) {
-                        // Successful requests get here
-                        // Update the page elements
-                        if (data.ItemCount == 0) {
-                            $('#row-' + data.DeleteId).fadeOut('slow');
-                        } else {
-                            $('#item-count-' + data.DeleteId).text(data.ItemCount);
-                        }
-                        $('#cart-total').text(data.CartTotal);
-                        $('#update-message').text(data.Message);
-                        $('#cart-status').text('Cart (' + data.CartCount + ')');
-                    });
-            }
-        });
-    });
-</script>
 <h3>
     <em>Review</em> your cart:
 </h3>
@@ -53,18 +26,18 @@
     </tr>
     @foreach (var item in Model.CartItems)
     {
-        <tr id="row-@item.RecordId">
+        <tr id="row-@item.ItemId">
             <td>
                 @Html.ActionLink(item.Item.Name,"Details", "Store", new { id = item.ItemId }, null)
             </td>
             <td>
                 @item.Item.Price
             </td>
-            <td id="item-count-@item.RecordId">
+            <td id="item-count-@item.ItemId">
                 @item.Count
             </td>
             <td>
-                <a href="#" class="RemoveLink" data-id="@item.RecordId">
+                <a href="#" class="RemoveLink" data-id="@item.ItemId">
                     Remove from cart
                 </a>
             </td>
@@ -81,3 +54,7 @@
         </td>
     </tr>
 </table>
+
+@section Scripts {
+    <script src="~/Scripts/App/RemoveItemFromCart.js"> </script>
+}
