--- a/ECommerceSite/Content/bootstrap.css
+++ b/ECommerceSite/Content/bootstrap.css
@@ -937,8 +937,8 @@ img {
 .img-responsive,
 .thumbnail > img,
 .thumbnail a > img,
-.carousel-inner > .item > img,
-.carousel-inner > .item > a > img {
+.carousel-inner > .product > img,
+.carousel-inner > .product > a > img {
   display: block;
   max-width: 100%;
   height: auto;
@@ -4605,15 +4605,15 @@ a.badge:focus {
   text-decoration: none;
   cursor: pointer;
 }
-.list-group-item.active > .badge,
+.list-group-product.active > .badge,
 .nav-pills > .active > a > .badge {
   color: #337ab7;
   background-color: #fff;
 }
-.list-group-item > .badge {
+.list-group-product > .badge {
   float: right;
 }
-.list-group-item > .badge + .badge {
+.list-group-product > .badge + .badge {
   margin-right: 5px;
 }
 .nav-pills > li > a > .badge {
@@ -4891,7 +4891,7 @@ a.thumbnail.active {
   padding-left: 0;
   margin-bottom: 20px;
 }
-.list-group-item {
+.list-group-product {
   position: relative;
   display: block;
   padding: 10px 15px;
@@ -4899,161 +4899,161 @@ a.thumbnail.active {
   background-color: #fff;
   border: 1px solid #ddd;
 }
-.list-group-item:first-child {
+.list-group-product:first-child {
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
 }
-.list-group-item:last-child {
+.list-group-product:last-child {
   margin-bottom: 0;
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
 }
-a.list-group-item {
+a.list-group-product {
   color: #555;
 }
-a.list-group-item .list-group-item-heading {
+a.list-group-product .list-group-product-heading {
   color: #333;
 }
-a.list-group-item:hover,
-a.list-group-item:focus {
+a.list-group-product:hover,
+a.list-group-product:focus {
   color: #555;
   text-decoration: none;
   background-color: #f5f5f5;
 }
-.list-group-item.disabled,
-.list-group-item.disabled:hover,
-.list-group-item.disabled:focus {
+.list-group-product.disabled,
+.list-group-product.disabled:hover,
+.list-group-product.disabled:focus {
   color: #777;
   cursor: not-allowed;
   background-color: #eee;
 }
-.list-group-item.disabled .list-group-item-heading,
-.list-group-item.disabled:hover .list-group-item-heading,
-.list-group-item.disabled:focus .list-group-item-heading {
+.list-group-product.disabled .list-group-product-heading,
+.list-group-product.disabled:hover .list-group-product-heading,
+.list-group-product.disabled:focus .list-group-product-heading {
   color: inherit;
 }
-.list-group-item.disabled .list-group-item-text,
-.list-group-item.disabled:hover .list-group-item-text,
-.list-group-item.disabled:focus .list-group-item-text {
+.list-group-product.disabled .list-group-product-text,
+.list-group-product.disabled:hover .list-group-product-text,
+.list-group-product.disabled:focus .list-group-product-text {
   color: #777;
 }
-.list-group-item.active,
-.list-group-item.active:hover,
-.list-group-item.active:focus {
+.list-group-product.active,
+.list-group-product.active:hover,
+.list-group-product.active:focus {
   z-index: 2;
   color: #fff;
   background-color: #337ab7;
   border-color: #337ab7;
 }
-.list-group-item.active .list-group-item-heading,
-.list-group-item.active:hover .list-group-item-heading,
-.list-group-item.active:focus .list-group-item-heading,
-.list-group-item.active .list-group-item-heading > small,
-.list-group-item.active:hover .list-group-item-heading > small,
-.list-group-item.active:focus .list-group-item-heading > small,
-.list-group-item.active .list-group-item-heading > .small,
-.list-group-item.active:hover .list-group-item-heading > .small,
-.list-group-item.active:focus .list-group-item-heading > .small {
+.list-group-product.active .list-group-product-heading,
+.list-group-product.active:hover .list-group-product-heading,
+.list-group-product.active:focus .list-group-product-heading,
+.list-group-product.active .list-group-product-heading > small,
+.list-group-product.active:hover .list-group-product-heading > small,
+.list-group-product.active:focus .list-group-product-heading > small,
+.list-group-product.active .list-group-product-heading > .small,
+.list-group-product.active:hover .list-group-product-heading > .small,
+.list-group-product.active:focus .list-group-product-heading > .small {
   color: inherit;
 }
-.list-group-item.active .list-group-item-text,
-.list-group-item.active:hover .list-group-item-text,
-.list-group-item.active:focus .list-group-item-text {
+.list-group-product.active .list-group-product-text,
+.list-group-product.active:hover .list-group-product-text,
+.list-group-product.active:focus .list-group-product-text {
   color: #c7ddef;
 }
-.list-group-item-success {
+.list-group-product-success {
   color: #3c763d;
   background-color: #dff0d8;
 }
-a.list-group-item-success {
+a.list-group-product-success {
   color: #3c763d;
 }
-a.list-group-item-success .list-group-item-heading {
+a.list-group-product-success .list-group-product-heading {
   color: inherit;
 }
-a.list-group-item-success:hover,
-a.list-group-item-success:focus {
+a.list-group-product-success:hover,
+a.list-group-product-success:focus {
   color: #3c763d;
   background-color: #d0e9c6;
 }
-a.list-group-item-success.active,
-a.list-group-item-success.active:hover,
-a.list-group-item-success.active:focus {
+a.list-group-product-success.active,
+a.list-group-product-success.active:hover,
+a.list-group-product-success.active:focus {
   color: #fff;
   background-color: #3c763d;
   border-color: #3c763d;
 }
-.list-group-item-info {
+.list-group-product-info {
   color: #31708f;
   background-color: #d9edf7;
 }
-a.list-group-item-info {
+a.list-group-product-info {
   color: #31708f;
 }
-a.list-group-item-info .list-group-item-heading {
+a.list-group-product-info .list-group-product-heading {
   color: inherit;
 }
-a.list-group-item-info:hover,
-a.list-group-item-info:focus {
+a.list-group-product-info:hover,
+a.list-group-product-info:focus {
   color: #31708f;
   background-color: #c4e3f3;
 }
-a.list-group-item-info.active,
-a.list-group-item-info.active:hover,
-a.list-group-item-info.active:focus {
+a.list-group-product-info.active,
+a.list-group-product-info.active:hover,
+a.list-group-product-info.active:focus {
   color: #fff;
   background-color: #31708f;
   border-color: #31708f;
 }
-.list-group-item-warning {
+.list-group-product-warning {
   color: #8a6d3b;
   background-color: #fcf8e3;
 }
-a.list-group-item-warning {
+a.list-group-product-warning {
   color: #8a6d3b;
 }
-a.list-group-item-warning .list-group-item-heading {
+a.list-group-product-warning .list-group-product-heading {
   color: inherit;
 }
-a.list-group-item-warning:hover,
-a.list-group-item-warning:focus {
+a.list-group-product-warning:hover,
+a.list-group-product-warning:focus {
   color: #8a6d3b;
   background-color: #faf2cc;
 }
-a.list-group-item-warning.active,
-a.list-group-item-warning.active:hover,
-a.list-group-item-warning.active:focus {
+a.list-group-product-warning.active,
+a.list-group-product-warning.active:hover,
+a.list-group-product-warning.active:focus {
   color: #fff;
   background-color: #8a6d3b;
   border-color: #8a6d3b;
 }
-.list-group-item-danger {
+.list-group-product-danger {
   color: #a94442;
   background-color: #f2dede;
 }
-a.list-group-item-danger {
+a.list-group-product-danger {
   color: #a94442;
 }
-a.list-group-item-danger .list-group-item-heading {
+a.list-group-product-danger .list-group-product-heading {
   color: inherit;
 }
-a.list-group-item-danger:hover,
-a.list-group-item-danger:focus {
+a.list-group-product-danger:hover,
+a.list-group-product-danger:focus {
   color: #a94442;
   background-color: #ebcccc;
 }
-a.list-group-item-danger.active,
-a.list-group-item-danger.active:hover,
-a.list-group-item-danger.active:focus {
+a.list-group-product-danger.active,
+a.list-group-product-danger.active:hover,
+a.list-group-product-danger.active:focus {
   color: #fff;
   background-color: #a94442;
   border-color: #a94442;
 }
-.list-group-item-heading {
+.list-group-product-heading {
   margin-top: 0;
   margin-bottom: 5px;
 }
-.list-group-item-text {
+.list-group-product-text {
   margin-bottom: 0;
   line-height: 1.3;
 }
@@ -5097,24 +5097,24 @@ a.list-group-item-danger.active:focus {
 .panel > .panel-collapse > .list-group {
   margin-bottom: 0;
 }
-.panel > .list-group .list-group-item,
-.panel > .panel-collapse > .list-group .list-group-item {
+.panel > .list-group .list-group-product,
+.panel > .panel-collapse > .list-group .list-group-product {
   border-width: 1px 0;
   border-radius: 0;
 }
-.panel > .list-group:first-child .list-group-item:first-child,
-.panel > .panel-collapse > .list-group:first-child .list-group-item:first-child {
+.panel > .list-group:first-child .list-group-product:first-child,
+.panel > .panel-collapse > .list-group:first-child .list-group-product:first-child {
   border-top: 0;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
 }
-.panel > .list-group:last-child .list-group-item:last-child,
-.panel > .panel-collapse > .list-group:last-child .list-group-item:last-child {
+.panel > .list-group:last-child .list-group-product:last-child,
+.panel > .panel-collapse > .list-group:last-child .list-group-product:last-child {
   border-bottom: 0;
   border-bottom-right-radius: 3px;
   border-bottom-left-radius: 3px;
 }
-.panel-heading + .list-group .list-group-item:first-child {
+.panel-heading + .list-group .list-group-product:first-child {
   border-top-width: 0;
 }
 .list-group + .panel-footer {
@@ -5399,7 +5399,7 @@ a.list-group-item-danger.active:focus {
   padding: 0;
   overflow: hidden;
 }
-.embed-responsive .embed-responsive-item,
+.embed-responsive .embed-responsive-product,
 .embed-responsive iframe,
 .embed-responsive embed,
 .embed-responsive object,
@@ -5821,19 +5821,19 @@ button.close {
   width: 100%;
   overflow: hidden;
 }
-.carousel-inner > .item {
+.carousel-inner > .product {
   position: relative;
   display: none;
   -webkit-transition: .6s ease-in-out left;
        -o-transition: .6s ease-in-out left;
           transition: .6s ease-in-out left;
 }
-.carousel-inner > .item > img,
-.carousel-inner > .item > a > img {
+.carousel-inner > .product > img,
+.carousel-inner > .product > a > img {
   line-height: 1;
 }
 @media all and (transform-3d), (-webkit-transform-3d) {
-  .carousel-inner > .item {
+  .carousel-inner > .product {
     -webkit-transition: -webkit-transform .6s ease-in-out;
          -o-transition:      -o-transform .6s ease-in-out;
             transition:         transform .6s ease-in-out;
@@ -5843,21 +5843,21 @@ button.close {
     -webkit-perspective: 1000;
             perspective: 1000;
   }
-  .carousel-inner > .item.next,
-  .carousel-inner > .item.active.right {
+  .carousel-inner > .product.next,
+  .carousel-inner > .product.active.right {
     left: 0;
     -webkit-transform: translate3d(100%, 0, 0);
             transform: translate3d(100%, 0, 0);
   }
-  .carousel-inner > .item.prev,
-  .carousel-inner > .item.active.left {
+  .carousel-inner > .product.prev,
+  .carousel-inner > .product.active.left {
     left: 0;
     -webkit-transform: translate3d(-100%, 0, 0);
             transform: translate3d(-100%, 0, 0);
   }
-  .carousel-inner > .item.next.left,
-  .carousel-inner > .item.prev.right,
-  .carousel-inner > .item.active {
+  .carousel-inner > .product.next.left,
+  .carousel-inner > .product.prev.right,
+  .carousel-inner > .product.active {
     left: 0;
     -webkit-transform: translate3d(0, 0, 0);
             transform: translate3d(0, 0, 0);
