--- a/ECommerceSite/Views/Store/CategoryMenu.cshtml
+++ b/ECommerceSite/Views/Store/CategoryMenu.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ECommerceSite.Models.Categorie>
+﻿@model IEnumerable<ECommerceSite.Models.Category>
 <ul id="categories">
     @foreach (var category in Model)
     {
