--- a/ECommerceSite/Views/Checkout/AddressAndPayment.cshtml
+++ b/ECommerceSite/Views/Checkout/AddressAndPayment.cshtml
@@ -43,33 +43,38 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(model => model.State, htmlAttributes: new { @class = "col-md-2 control-label" })
+                    @Html.LabelFor(model => model.Country, htmlAttributes: new { @class = "col-md-2 control-label" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.State, new { htmlAttributes = new { @class = "form-control", @type = "text", @placeholder = "State" } })
-                        @Html.ValidationMessageFor(model => model.State, "", new { @class = "text-danger" })
+                        <div class="editor-field">
+                            @Html.DropDownListFor(model => model.Country, (IEnumerable<SelectListItem>)ViewBag.Countries, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.Country, "", new { @class = "text-danger" })
+                        </div>
                     </div>
                 </div>
+                <div class="form-group" id="stateForm"></div>
                 <div class="form-group">
                     @Html.LabelFor(model => model.PostalCode, htmlAttributes: new { @class = "col-md-2 control-label" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.PostalCode, new { htmlAttributes = new { @class = "form-control", @type = "text", @placeholder = "Zip Code" } })
+                        @Html.EditorFor(model => model.PostalCode, new { htmlAttributes = new { @class = "form-control", @type = "text", @placeholder = "Zip Code", Value = "" } })
                         @Html.ValidationMessageFor(model => model.PostalCode, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Country, htmlAttributes: new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Country, new { htmlAttributes = new { @class = "form-control", @type = "text", @placeholder = "Country" } })
-                        @Html.ValidationMessageFor(model => model.Country, "", new { @class = "text-danger" })
-                    </div>
-                </div>
                 <br>
+                <div class="col-md-offset-2 col-md-10">
+                    <span class="help-block">For security the credit card is not stored in our system.</span>
+                </div>
                 <div class="form-group">
                     @Html.LabelFor(model => model.CreditCardNumber, htmlAttributes: new { @class = "col-md-2 control-label" })
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.CreditCardNumber, new { htmlAttributes = new { @class = "form-control", @placeholder = "Credit Card Number" } })
                         @Html.ValidationMessageFor(model => model.CreditCardNumber, "", new { @class = "text-danger" })
-                        <span class="help-block">For security the credit card is not stored in our system.</span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.CSC, htmlAttributes: new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.CSC, new { htmlAttributes = new { @class = "form-control", @type = "text", @placeholder = "Security Code", Value = "" } })
+                        @Html.ValidationMessageFor(model => model.CSC, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-roup">
@@ -110,5 +115,9 @@
 </div>
 
 @section Scripts {
+    <script>
+        $("#Country").prepend($("<option selected=\"selected\" disabled/>").html("Select a Country"));
+    </script>
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/Scripts/App/AddStateDropdown.js")
 }
